--- a/mi/ertongzsc.html
+++ b/mi/ertongzsc.html
@@ -68,14 +68,431 @@
 						</ul>
 					</div>
 					</li>
-					<li class="header-nav-item"><a href="" herf="#">小米</a></li>
-					<li class="header-nav-item"><a href="" herf="#">红米</a></li>
-					<li class="header-nav-item"><a href="" herf="#">电视</a></li>
-					<li class="header-nav-item"><a href="" herf="#">笔记本</a></li>
-					<li class="header-nav-item"><a href="" herf="#">盒子</a></li>
-					<li class="header-nav-item"><a href="" herf="#">新品</a></li>
-					<li class="header-nav-item"><a href="" herf="#">路由器</a></li>
-					<li class="header-nav-item"><a href="" herf="#">智能硬件</a></li>
+					<li class="header-nav-item">
+						<a href="" herf="#">小米</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/mix3-320.png" alt=""></div>
+								<h3 class="product-name">小米MX3</h3>
+								<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/mix3-320.png" alt=""></div>
+								<h3 class="product-name">小米MX3</h3>
+								<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/mix3-320.png" alt=""></div>
+								<h3 class="product-name">小米MX3</h3>
+								<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/mix3-320.png" alt=""></div>
+								<h3 class="product-name">小米MX3</h3>
+								<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/mix3-320.png" alt=""></div>
+								<h3 class="product-name">小米MX3</h3>
+								<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/mix3-320.png" alt=""></div>
+								<h3 class="product-name">小米MX3</h3>
+								<p class="product-price">
+										<strong>3699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="header-nav-item">
+						<a href="" herf="#">红米</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/6pro320-220.png" alt=""></div>
+								<h3 class="product-name">红米6Pro</h3>
+								<p class="product-price">
+										<strong>999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/6pro320-220.png" alt=""></div>
+								<h3 class="product-name">红米6Pro</h3>
+								<p class="product-price">
+										<strong>999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/6pro320-220.png" alt=""></div>
+								<h3 class="product-name">红米6Pro</h3>
+								<p class="product-price">
+										<strong>999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/6pro320-220.png" alt=""></div>
+								<h3 class="product-name">红米6Pro</h3>
+								<p class="product-price">
+										<strong>999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/6pro320-220.png" alt=""></div>
+								<h3 class="product-name">红米6Pro</h3>
+								<p class="product-price">
+										<strong>999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/6pro320-220.png" alt=""></div>
+								<h3 class="product-name">红米6Pro</h3>
+								<p class="product-price">
+										<strong>999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="header-nav-item">
+						<a href="" herf="#">电视</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/4s75.png" alt=""></div>
+								<h3 class="product-name">小米4S 75寸</h3>
+								<p class="product-price">
+										<strong>7999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/4s75.png" alt=""></div>
+								<h3 class="product-name">小米4S 75寸</h3>
+								<p class="product-price">
+										<strong>7999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/4s75.png" alt=""></div>
+								<h3 class="product-name">小米4S 75寸</h3>
+								<p class="product-price">
+										<strong>7999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/4s75.png" alt=""></div>
+								<h3 class="product-name">小米4S 75寸</h3>
+								<p class="product-price">
+										<strong>7999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/4s75.png" alt=""></div>
+								<h3 class="product-name">小米4S 75寸</h3>
+								<p class="product-price">
+										<strong>7999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/4s75.png" alt=""></div>
+								<h3 class="product-name">小米4S 75寸</h3>
+								<p class="product-price">
+										<strong>7999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="header-nav-item">
+						<a href="" herf="#">笔记本</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xinbijiben.png" alt=""></div>
+								<h3 class="product-name">小米游戏本</h3>
+								<p class="product-price">
+										<strong>6699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xinbijiben.png" alt=""></div>
+								<h3 class="product-name">小米游戏本</h3>
+								<p class="product-price">
+										<strong>6699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xinbijiben.png" alt=""></div>
+								<h3 class="product-name">小米游戏本</h3>
+								<p class="product-price">
+										<strong>6699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xinbijiben.png" alt=""></div>
+								<h3 class="product-name">小米游戏本</h3>
+								<p class="product-price">
+										<strong>6699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xinbijiben.png" alt=""></div>
+								<h3 class="product-name">小米游戏本</h3>
+								<p class="product-price">
+										<strong>6699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xinbijiben.png" alt=""></div>
+								<h3 class="product-name">小米游戏本</h3>
+								<p class="product-price">
+										<strong>6699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="header-nav-item">
+						<a href="" herf="#">空调</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/kongtiao320-220!160x110.jpg" alt=""></div>
+								<h3 class="product-name">米家空调</h3>
+								<p class="product-price">
+										<strong>1999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/kongtiao320-220!160x110.jpg" alt=""></div>
+								<h3 class="product-name">米家空调</h3>
+								<p class="product-price">
+										<strong>1999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/kongtiao320-220!160x110.jpg" alt=""></div>
+								<h3 class="product-name">米家空调</h3>
+								<p class="product-price">
+										<strong>1999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/kongtiao320-220!160x110.jpg" alt=""></div>
+								<h3 class="product-name">米家空调</h3>
+								<p class="product-price">
+										<strong>1999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/kongtiao320-220!160x110.jpg" alt=""></div>
+								<h3 class="product-name">米家空调</h3>
+								<p class="product-price">
+										<strong>1999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/kongtiao320-220!160x110.jpg" alt=""></div>
+								<h3 class="product-name">米家空调</h3>
+								<p class="product-price">
+										<strong>1999</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="header-nav-item">
+						<a href="" herf="#">新品</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/qingchun-320.png" alt=""></div>
+								<h3 class="product-name">小米8青春版</h3>
+								<p class="product-price">
+										<strong>1399</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/qingchun-320.png" alt=""></div>
+								<h3 class="product-name">小米8青春版</h3>
+								<p class="product-price">
+										<strong>1399</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/qingchun-320.png" alt=""></div>
+								<h3 class="product-name">小米8青春版</h3>
+								<p class="product-price">
+										<strong>1399</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/qingchun-320.png" alt=""></div>
+								<h3 class="product-name">小米8青春版</h3>
+								<p class="product-price">
+										<strong>1399</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/qingchun-320.png" alt=""></div>
+								<h3 class="product-name">小米8青春版</h3>
+								<p class="product-price">
+										<strong>1399</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/qingchun-320.png" alt=""></div>
+								<h3 class="product-name">小米8青春版</h3>
+								<p class="product-price">
+										<strong>1399</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+
+					</li>
+					<li class="header-nav-item">
+						<a href="" herf="#">路由器</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomiluyouqi4.png" alt=""></div>
+								<h3 class="product-name">小米路由器4</h3>
+								<p class="product-price">
+										<strong>199</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomiluyouqi4.png" alt=""></div>
+								<h3 class="product-name">小米路由器4</h3>
+								<p class="product-price">
+										<strong>199</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomiluyouqi4.png" alt=""></div>
+								<h3 class="product-name">小米路由器4</h3>
+								<p class="product-price">
+										<strong>199</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomiluyouqi4.png" alt=""></div>
+								<h3 class="product-name">小米路由器4</h3>
+								<p class="product-price">
+										<strong>199</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomiluyouqi4.png" alt=""></div>
+								<h3 class="product-name">小米路由器4</h3>
+								<p class="product-price">
+										<strong>199</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomiluyouqi4.png" alt=""></div>
+								<h3 class="product-name">小米路由器4</h3>
+								<p class="product-price">
+										<strong>199</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+					</li>
+					<li class="header-nav-item">
+						<a href="" herf="#">智能硬件</a>
+						<div class="box ">
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomijingshuiqi!160x110.jpg" alt=""></div>
+								<h3 class="product-name">小米净水器</h3>
+								<p class="product-price">
+										<strong>1699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomijingshuiqi!160x110.jpg" alt=""></div>
+								<h3 class="product-name">小米净水器</h3>
+								<p class="product-price">
+										<strong>1699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomijingshuiqi!160x110.jpg" alt=""></div>
+								<h3 class="product-name">小米净水器</h3>
+								<p class="product-price">
+										<strong>1699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomijingshuiqi!160x110.jpg" alt=""></div>
+								<h3 class="product-name">小米净水器</h3>
+								<p class="product-price">
+										<strong>1699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomijingshuiqi!160x110.jpg" alt=""></div>
+								<h3 class="product-name">小米净水器</h3>
+								<p class="product-price">
+										<strong>1699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+							<div class="box1">
+								<span class="flag new-flag">新品</span>
+								<div class="box2"><img src="imgzsc/xiaomijingshuiqi!160x110.jpg" alt=""></div>
+								<h3 class="product-name">小米净水器</h3>
+								<p class="product-price">
+										<strong>1699</strong><span>&nbsp;元起</span>
+								</p>
+							</div>
+						</div>
+					</li>
 					<li class="header-nav-item"><a href="" herf="#">服务</a></li>
 				</ul>
 			</nav>
