--- a/mi/fuwuzsc.html
+++ b/mi/fuwuzsc.html
@@ -148,43 +148,77 @@
 		</div>
 		<div class="bottom">
 			<div class="top ">
-			<h2>自助服务</h2>
+			<h2>产品支持</h2>
 			<div class="box">
 				<img src="imgzsc/c1.jpg" alt="">
-				<a href="#" class="list-name">申请售后服务</a>
+				<a href="#" class="list-name">小米手机</a>
 			</div>
 			<div class="box">
 				<img src="imgzsc/c2.png" alt="">
-				<a href="#" class="list-name">订单查询</a>
+				<a href="#" class="list-name">红米手机</a>
 			</div>
 			<div class="box">
 				<img src="imgzsc/c3.jpg" alt="">
-				<a href="#" class="list-name">小米账户</a>
+				<a href="#" class="list-name">小米平板</a>
 			</div>
 			<div class="box">
 				<img src="imgzsc/c4.jpg" alt="">
-				<a href="#" class="list-name">保障服务</a>
+				<a href="#" class="list-name">智能硬件</a>
 			</div>
 			<div class="box">
 				<img src="imgzsc/c5.jpg" alt="">
-				<a href="#" class="list-name">以旧换新</a>
+				<a href="#" class="list-name">小米电视</a>
 			</div>
 			<div class="box">
 				<img src="imgzsc/c6.jpg" alt="">
-				<a href="#" class="list-name">付费服务</a>
+				<a href="#" class="list-name">小米盒子</a>
 			</div>
 			<div class="box">
 				<img src="imgzsc/c7.jpg" alt="">
-				<a href="#" class="list-name">售后服务</a>
+				<a href="#" class="list-name">小米路由器</a>
 			</div>
 			<div class="box">
 				<img src="imgzsc/c8.jpg" alt="">
-				<a href="#" class="list-name">查辨真伪</a>
+				<a href="#" class="list-name">小米笔记本及周边产品</a>
 			</div>
 		</div>
 	</section>
 	<section class="service container">
-		<div class="box1"></div>
+		<div class="box1 ">
+			<h2>自助服务</h2>
+			<div class="left">
+				<img src="imgzsc/serviceCenter_img.jpg" alt="">
+			</div>
+			<div class="right">
+				<h3>售后网点</h3>
+				<p class="desc">小米售后，一站式为您提供售后服务。有售后，放心购是我们的服务宗旨。</p>
+				<div class="content">
+					<img src="imgzsc/serviceCenter_icon1.png" alt="">
+					<a class="a1" href="">预约服务</a>
+				</div>
+				<div class="content">
+					<img src="imgzsc/serviceCenter_icon2.png" alt="">
+					<a class="a1" href="">1小时快修</a>
+				</div>
+				<div class="content">
+					<img src="imgzsc/serviceCenter_icon3.png" alt="">
+					<a class="a1" href="">软件升级</a>
+				</div>
+				<div class="content">
+					<img src="imgzsc/serviceCenter_icon4.png" alt="">
+					<a class="a1" href="">咨询体验</a>
+				</div>
+				<div class="content">
+					<img src="imgzsc/serviceCenter_icon5.png" alt="">
+					<a class="a1" href="">面对面拆机</a>
+				</div>
+			<!-- 	<img src="imgzsc/serviceCenter_icon2.png" alt=""><a class="a1" href="">1小时快修</a>
+				<img src="imgzsc/serviceCenter_icon3.png" alt=""><a class="a1" href="">软件升级</a>
+				<img src="imgzsc/serviceCenter_icon4.png" alt=""><a class="a1" href="">咨询体验</a>
+				<img src="imgzsc/serviceCenter_icon5.png" alt=""><a class="a1" href="">面对面拆机</a>
+				<a href="#" class="list-name">网点查询></a> -->
+			</div>
+		</div>
 		<div class="box2"></div>
 	</section>
 	<section class="contact container"></section>
@@ -247,7 +281,6 @@
 			</div>
 		</div>
 	</section>
-
 	<footer class="footer">
 			<div class="container">
 				<div class="info">
