--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -128,6 +128,124 @@
 					</ul>
 				</div>
 			</div>
+			<div class="index-fquestion">
+				<h2 class="webfont">自助服务</h2>
+				<div class="fquestion clearfix">
+					<ul>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon1.png" alt="">
+								<h3>申请售后服务</h3>
+								<span>一键预约，快速维修</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon2.png" alt="">
+								<h3>订单查询</h3>
+								<span>购物信息，快速查询</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon3.png" alt="">
+								<h3>小米账户</h3>
+								<span>重置密保，安全验证</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon4.png" alt="">
+								<h3>保障服务</h3>
+								<span>碎屏延保，双重保障</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon5.png" alt="">
+								<h3>以旧换新</h3>
+								<span>便捷交易，价格保障</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon6.png" alt="">
+								<h3>付费服务</h3>
+								<span>安装服务，手机维修</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon7.png" alt="">
+								<h3>售后政策</h3>
+								<span>条款说明，安心保障</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/selfservice_icon8.png" alt="">
+								<h3>查询真伪</h3>
+								<span>便被真伪，放心使用</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="index-goods">
+				<h2 class="webfont">产品支持</h2>
+				<div class="goods clearfix">
+					<ul>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/ph1.jpg" alt="">
+								<span>小米手机</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/ph2.jpg" alt="">
+								<span>红米手机</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/ph3.jpg" alt="">
+								<span>小米平板</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/el3.jpg" alt="">
+								<span>小米电视</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/ph1.jpg" alt="">
+								<span>小米手机</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/ph2.jpg" alt="">
+								<span>红米手机</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/ph3.jpg" alt="">
+								<span>小米平板</span>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<img src="images/el3.jpg" alt="">
+								<span>小米电视</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</section>
 	<footer class="footer">
