--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -246,6 +246,39 @@
 					</ul>
 				</div>
 			</div>
+			<div class="index-center">
+				<h2 class="webfont">服务中心</h2>
+				<div class="left">
+					<img src="images/serviceCenter_img.jpg" alt="">
+				</div>
+				<div class="right">
+					<p>售后网点</p>
+					<span>小米售后，一站式为您提供售后服务。有售后，放心购是我们的服务宗旨。</span>
+					<div class="icon-wrap clearfix">
+						<dl>
+							<dd><img src="images/serviceCenter_icon1.png" alt=""></dd>
+							<dt>预约服务</dt>
+						</dl>
+						<dl>
+							<dd><img src="images/serviceCenter_icon2.png" alt=""></dd>
+							<dt>1小时快修</dt>
+						</dl>
+						<dl>
+							<dd><img src="images/serviceCenter_icon3.png" alt=""></dd>
+							<dt>软件升级</dt>
+						</dl>
+						<dl>
+							<dd><img src="images/serviceCenter_icon4.png" alt=""></dd>
+							<dt>咨询体验</dt>
+						</dl>
+						<dl>
+							<dd><img src="images/serviceCenter_icon5.png" alt=""></dd>
+							<dt>面对面拆机</dt>
+						</dl>
+					</div>
+					<a href="#">网点查询 &gt;</a>
+				</div>
+			</div>
 		</div>
 	</section>
 	<footer class="footer">
