--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -246,7 +246,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="index-center">
+			<div class="index-center clearfix">
 				<h2 class="webfont">服务中心</h2>
 				<div class="left">
 					<img src="images/serviceCenter_img.jpg" alt="">
@@ -277,6 +277,49 @@
 						</dl>
 					</div>
 					<a href="#">网点查询 &gt;</a>
+				</div>
+			</div>
+			<div class="index-needhelp">
+				<h2 class="webfont">常见问题</h2>
+				<div class="search-wrap">
+					<input type="text" class="search-content" placeholder="请输入要搜索的内容">
+					<a href="#" class="search-btn"><i class="iconfont">&#xe616;</i></a>
+					<!-- <p>搜索内容不能为空</p> -->
+				</div>
+				<div class="content">
+					<ul class="tab-title clearfix">
+						<li class="active">账户管理</li>
+						<li>购物指南</li>
+						<li>订单操作</li>
+						<li>售后服务</li>
+						<li>特色服务</li>
+						<li>其他产品咨询</li>
+						<li>线下销售渠道</li>
+					</ul>
+					<div class="tab-content">
+						<div class="per active">
+							<ul class="clearfix">
+								<li><a href="#">小米账户如何注册？</a></li>
+								<li><a href="#">手机如何申诉解锁？</a></li>
+								<li><a href="#">什么是账号申诉重置密码保护？</a></li>
+								<li><a href="#">如何进行重置密码保护？</a></li>
+								<li><a href="#">小米账号忘记密码如何找回？</a></li>
+								<li><a href="#">如何认证小米社区VIP？</a></li>
+							</ul>
+							<a href="#">查看更多 &gt;</a>
+						</div>
+						<div class="per active">
+							<ul class="clearfix">
+								<li><a href="#">小米账户如何注册？</a></li>
+								<li><a href="#">手机如何申诉解锁？</a></li>
+								<li><a href="#">什么是账号申诉重置密码保护？</a></li>
+								<li><a href="#">如何进行重置密码保护？</a></li>
+								<li><a href="#">小米账号忘记密码如何找回？</a></li>
+								<li><a href="#">如何认证小米社区VIP？</a></li>
+							</ul>
+							<a href="#">查看更多 &gt;</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
