--- a/mi/fuwuzsc.html
+++ b/mi/fuwuzsc.html
@@ -31,7 +31,10 @@
 			<div class="cart-box">
 				<a href="#">
 					<i class="iconfont icon-cart">&#xe60c;</i>
-					<span class="cart-text">购物车</span>(<span class="cart-num">0</span>)
+					<span class="cart-text">购物车
+						<div class="box1">
+						购物车中还没有商品，赶紧选购吧！
+					</div></span>(<span class="cart-num">0</span>)
 				</a>
 			</div>
 		</nav>
