--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -308,18 +308,51 @@
 							</ul>
 							<a href="#">查看更多 &gt;</a>
 						</div>
-						<div class="per active">
-							<ul class="clearfix">
-								<li><a href="#">小米账户如何注册？</a></li>
-								<li><a href="#">手机如何申诉解锁？</a></li>
-								<li><a href="#">什么是账号申诉重置密码保护？</a></li>
-								<li><a href="#">如何进行重置密码保护？</a></li>
-								<li><a href="#">小米账号忘记密码如何找回？</a></li>
-								<li><a href="#">如何认证小米社区VIP？</a></li>
-							</ul>
-							<a href="#">查看更多 &gt;</a>
-						</div>
 					</div>
+				</div>
+			</div>
+			<div class="index-contact">
+				<h2 class="webfont">联系客服</h2>
+				<div class="contact-wrap">
+					<ul>
+						<li class="transi-up">
+							<a href="#">
+								<p class="content">
+									<img src="images/contact_icon1.png" alt="">
+									<span>7x24在线客服</span>
+								</p>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<p class="content">
+									<img src="images/contact_icon2.png" alt="">
+									<span>商城官方微博</span>
+								</p>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<p class="content">
+									<img src="images/contact_icon3.png" alt="">
+									<span>商城官方微信</span>
+								</p>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<p class="content">
+									<img src="images/contact_icon4.png" alt="">
+									<span class="two-line">
+										小米金服热线
+										<br>
+										400-100-3399
+									</span>
+								</p>
+								<p class="tip">贷款、保险、理财、钱包，服务时间：9:00-18:00</p>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
