--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -123,7 +123,7 @@
 				</div>
 				<div class="controls">
 					<ul class="controls-list">
-						<li class="controls-list-item"><a href="#"></a></li>
+						<li class="controls-list-item"><a href="#" class="active"></a></li>
 						<li class="controls-list-item"><a href="#"></a></li>
 					</ul>
 				</div>
@@ -314,7 +314,7 @@
 			<div class="index-contact">
 				<h2 class="webfont">联系客服</h2>
 				<div class="contact-wrap">
-					<ul>
+					<ul class="clearfix">
 						<li class="transi-up">
 							<a href="#">
 								<p class="content">
@@ -344,6 +344,19 @@
 								<p class="content">
 									<img src="images/contact_icon4.png" alt="">
 									<span class="two-line">
+										小米商城热线
+										<br>
+										400-100-5678
+									</span>
+								</p>
+								<p class="tip">手机、电视盒子、智能硬件等，服务时间：8:00-18:00</p>
+							</a>
+						</li>
+						<li class="transi-up">
+							<a href="#">
+								<p class="content">
+									<img src="images/contact_icon5.png" alt="">
+									<span class="two-line">
 										小米金服热线
 										<br>
 										400-100-3399
@@ -352,16 +365,178 @@
 								<p class="tip">贷款、保险、理财、钱包，服务时间：9:00-18:00</p>
 							</a>
 						</li>
+						<li class="transi-up">
+							<a href="#">
+								<p class="content">
+									<img src="images/contact_icon6.png" alt="">
+									<span class="two-line">
+										小米移动热线
+										<br>
+										400-922-3838
+									</span>
+								</p>
+								<p class="tip">任我行、吃到饱、米粉卡等，服务时间：8:00-18:00</p>
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
 	<footer class="footer">
-		<div class="container"></div>
+		<div class="container">
+			<div class="service">
+				<ul class="clearfix">
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe634;</i>
+							预约维修服务
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe635;</i>
+							7天无理由退货
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe636;</i>
+							15天免费换货
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe638;</i>
+							满150元包邮
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe637;</i>
+							520余家售后网点
+						</a>
+					</li>					
+				</ul>
+			</div>
+			<div class="links clearfix">
+				<dl class="link-item">
+					<dt>帮助中心</dt>
+					<dd><a href="#">账户管理</a></dd>
+					<dd><a href="#">购物指南</a></dd>
+					<dd><a href="#">订单操作</a></dd>
+				</dl>
+				<dl class="link-item">
+					<dt>帮助中心</dt>
+					<dd><a href="#">账户管理</a></dd>
+					<dd><a href="#">购物指南</a></dd>
+					<dd><a href="#">订单操作</a></dd>
+				</dl>
+				<dl class="link-item">
+					<dt>帮助中心</dt>
+					<dd><a href="#">账户管理</a></dd>
+					<dd><a href="#">购物指南</a></dd>
+					<dd><a href="#">订单操作</a></dd>
+				</dl>
+				<dl class="link-item">
+					<dt>帮助中心</dt>
+					<dd><a href="#">账户管理</a></dd>
+					<dd><a href="#">购物指南</a></dd>
+					<dd><a href="#">订单操作</a></dd>
+				</dl>
+				<dl class="link-item">
+					<dt>帮助中心</dt>
+					<dd><a href="#">账户管理</a></dd>
+					<dd><a href="#">购物指南</a></dd>
+					<dd><a href="#">订单操作</a></dd>
+				</dl>
+				<dl class="link-item">
+					<dt>帮助中心</dt>
+					<dd><a href="#">账户管理</a></dd>
+					<dd><a href="#">购物指南</a></dd>
+					<dd><a href="#">订单操作</a></dd>
+				</dl>	
+				<div class="link-contact">
+					<p class="phone">400-100-5678</p>
+					<p class="work-time">周一至周日 8:00-18:00</p>
+					<p class="desc">（仅收市话费）</p>
+					<a href="#">
+						<i class="iconfont">&#xe600;</i>联系客服
+					</a>
+				</div>												
+			</div>
+		</div>
 	</footer>
-	<section class="end">
-		<div class="container"></div>
+	<section class="end2">
+		<div class="container">
+			<div class="info clearfix">
+				<div class="logo"></div>
+				<div class="site">
+					<p class="nav-link">
+						<a href="#">小米商城</a>
+						<span class="sep"></span>
+						<a href="#">MIUI</a>
+						<span class="sep"></span>
+						<a href="#">米家</a>
+						<span class="sep"></span>
+						<a href="#">米聊</a>
+						<span class="sep"></span>
+						<a href="#">多看</a>
+						<span class="sep"></span>
+						<a href="#">路由器</a>
+						<span class="sep"></span>
+						<a href="#">游戏</a>
+						<span class="sep"></span>
+						<a href="#">米粉卡</a>
+						<span class="sep"></span>
+						<a href="#">政企服务</a>
+						<span class="sep"></span>
+						<a href="#">小米天猫店</a>
+						<span class="sep"></span>
+						<a href="#">小米天猫店</a>
+						<span class="sep"></span>
+						<a href="#">隐私政策</a>
+						<span class="sep"></span>
+						<a href="#">问题反馈</a>
+						<span class="sep"></span>
+						<a href="#">廉政举报</a>
+						<span class="sep"></span>
+						<a href="#">Select Region</a>
+					</p>
+					<p class="icp">
+						<a href="#">mi.com </a>
+						<a href="#">京ICP证110507号 </a>
+						<a href="#">京ICP备10046444号 </a>
+						<a href="#">京ICP备10046444号 </a>
+						<a href="#">京ICP备10046444号 </a>
+					</p>
+					<p class="icp">
+						<a href="#">（京）网械平台备字（2018）第00005号 </a>
+						<a href="#">互联网药品信息服务资格证 (京) -非经营性-2014-0090 </a>
+						<a href="#">营业执照 </a>
+					</p>
+					<p class="decare">违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
+				</div>
+				<div class="links">
+					<a href="#">
+						<img src="images/truste.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-1.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-2.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-3.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-4.png" alt="">
+					</a>			
+				</div>
+			</div>
+			<div class="slogan"></div>
+		</div>
 	</section>
 </body>
 </html>
